[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/title_theme.tres" type="Theme" id=1]
[ext_resource path="res://fonts/prompt_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/ui/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://sprites/Flame.png" type="Texture" id=4]
[ext_resource path="res://scenes/levels/LevelTileMap.tres" type="TileSet" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.4
theme = ExtResource( 1 )
text = "Goat Game"
align = 1
valign = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.34
anchor_top = 0.45
anchor_right = 0.66
anchor_bottom = 1.0
custom_constants/separation = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 96.0
margin_bottom = 9.0
theme = ExtResource( 2 )
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 96.0
margin_bottom = 19.0
theme = ExtResource( 2 )
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 96.0
margin_bottom = 29.0
theme = ExtResource( 2 )
text = "Quit"

[node name="PlayPopup" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="PlayPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="PlayPopup/ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.4
theme = ExtResource( 1 )
text = "Select Game"
align = 1
valign = 2

[node name="PlaySlots" type="VBoxContainer" parent="PlayPopup/ColorRect"]
anchor_left = 0.34
anchor_top = 0.5
anchor_right = 0.66
anchor_bottom = 1.0
grow_vertical = 2
custom_constants/separation = 5

[node name="Slot1" type="Button" parent="PlayPopup/ColorRect/PlaySlots"]
margin_right = 96.0
margin_bottom = 9.0
theme = ExtResource( 2 )
text = "Slot 1"

[node name="Slot2" type="Button" parent="PlayPopup/ColorRect/PlaySlots"]
margin_top = 14.0
margin_right = 96.0
margin_bottom = 23.0
theme = ExtResource( 2 )
text = "Slot 2"

[node name="Slot3" type="Button" parent="PlayPopup/ColorRect/PlaySlots"]
margin_top = 28.0
margin_right = 96.0
margin_bottom = 37.0
theme = ExtResource( 2 )
text = "Slot 3"

[node name="Slot4" type="Button" parent="PlayPopup/ColorRect/PlaySlots"]
margin_top = 42.0
margin_right = 96.0
margin_bottom = 51.0
theme = ExtResource( 2 )
text = "Slot 4"

[node name="Slot5" type="Button" parent="PlayPopup/ColorRect/PlaySlots"]
margin_top = 56.0
margin_right = 96.0
margin_bottom = 65.0
theme = ExtResource( 2 )
text = "Slot 5"

[node name="BackButton" type="Button" parent="PlayPopup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -10.0
theme = ExtResource( 2 )
text = "< Back"

[node name="SettingsPopup" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="SettingsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="SettingsPopup/ColorRect"]
margin_right = 40.0
margin_bottom = 14.0
text = "Settings here."

[node name="BackButton" type="Button" parent="SettingsPopup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -10.0
theme = ExtResource( 2 )
text = "< Back"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 110, 126 )
frames = SubResource( 3 )
speed_scale = 0.8
playing = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 12, 12 )
format = 1
tile_data = PoolIntArray( 9, 16, 0, 15, 16, 0, 65545, 16, 0, 65551, 16, 0, 131081, 16, 0, 131087, 16, 0, 196617, 16, 0, 196623, 16, 0, 262153, 16, 0, 262159, 16, 0, 720904, 13, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 14, 0 )

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="PlayPopup/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="SettingsPopup/BackButton" to="." method="_on_BackButton_pressed"]
